--- a/www/about.html
+++ b/www/about.html
@@ -7,7 +7,8 @@
   <title>About Page</title>
 </head>
 <body>
-  <h1>About</h1>
-  <p>This is the about page. Return to the <a href="/">index</a></p>.
+<h1>About</h1>
+<p>This is the about page. Return to the <a href="/">index</a></p>.
+<p>This is the favicon file. <a href="favicon_io.zip">Click here</a> to download.</p>
 </body>
-</html>
+</html>>
